Bug fixes, demo functionality
Fixed IE scroll bug, added mutation observer to detect dynamic content
changes, added dynamic demo functionality

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html data-ng-app="ngScrollSpy">
+<html data-ng-app="demo">
 <head>
     <title>AngularJS ng-ScrollSpy.js</title>
 
     <script type="text/javascript" src="http://code.angularjs.org/1.2.1/angular.min.js"></script>
-    <script type="text/javascript" src="ng-ScrollSpy.js"></script>
+	<script type="text/javascript" src="demo.js"></script>
+	<script type="text/javascript" src="ng-ScrollSpy.js"></script>
 
 	<link rel="stylesheet/less" type="text/css" href="styles/main.less" />
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.5.0/less.min.js"></script>
-
 
 </head>
 <body data-scrollspy data-scrollspy-offset="200">
@@ -53,10 +53,10 @@
 		</div>
 
 	</section>
-	<section id="hongkong"></section>
-	<section id="newyork"></section>
-	<section id="london"></section>
-	<section id="sydney"></section>
+	<section id="hongkong" data-expand></section>
+	<section id="newyork" data-expand></section>
+	<section id="london" data-expand></section>
+	<section id="sydney" data-expand></section>
 
 </body>
 </html>
