--- a/index.html
+++ b/index.html
@@ -38,17 +38,13 @@
 
 			<code>var myApp = angular.module( 'myApp', [ 'ngScrollSpy' ] );</code>
 
-			<p>Apply it to your app</p>
+			<p>The following line is your navigation item element which will be given an `active` class when the specified ID is spied upon. It is element type unspecific.</p>
 
-			<code>&lt;body data-scrollspy&gt;...&lt;/body&gt;</code>
-
-			<p>The attribute `data-scrollspy-offset` can also be used. Default is 0. Must be used on the element with the scrollspy directive. The following line is your navigation item element which will be given an `active` class when the specified ID is spied upon. It is element type unspecific.</p>
-
-			<code>&lt;span data-spy="myID"&gt;myID&lt;/span&gt;</code>
+			<code>&lt;span data-scrollspy-listen="myID"&gt;myID&lt;/span&gt;</code>
 
 			<p>This is the element you wish to spy on.</p>
 
-			<code>&lt;section id="myID"&gt;&lt;/section&gt;</code>
+			<code>&lt;section id="myID" data-scrollspy-broadcast&gt;&lt;/section&gt;</code>
 
 			<p>NOTE: this AngularJS module is simply a scrollspy, anchor linking / smooth scrolling is another modules concern.</p>
 
