Fix demo Angular script location

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>AngularJS ng-ScrollSpy.js</title>
 
-  <script type="text/javascript" src="lib/angular/angular.min.js"></script>
+  <script type="text/javascript" src="demo/scripts/angular.min.js"></script>
   <script type="text/javascript" src="demo/scripts/demo.js"></script>
   <script type="text/javascript" src="src/ng-ScrollSpy.js"></script>
 
