Remove code and point to readme file instead

--- a/index.html
+++ b/index.html
@@ -49,15 +49,7 @@
 
     <code>&lt;section id="myID" data-scrollspy-broadcast data-scrollspy-offset="100"&gt;&lt;/section&gt;</code>
 
-    <p>There are some global config options available:</p>
-
-    <code>myApp.config([ 'scrollspyConfigProvider', function( scrollspyConfigProvider ) {</br>
-      &ensp; scrollspyConfigProvider.config = {</br>
-      &ensp;&ensp; offset: 250, <span class="comment">//offset added to element</span></br>
-      &ensp;&ensp; throttle: true, <span class="comment">//whether to limit the scroll event to once every n</span></br>
-      &ensp;&ensp; delay: 100 <span class="comment">//the delay between scroll events</span></br>
-      &ensp; };</br>
-      }]);</code>
+    <p>See readme.md for more options available</p>
 
     <p>NOTE: this AngularJS module is simply a scrollspy, anchor linking / smooth scrolling is another modules concern.</p>
 
